// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkProgress should not go bellow the min bound 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "borderRadius": 40,
        "height": 8,
        "width": 0,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should not go over the max bound 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "borderRadius": 40,
        "height": 8,
        "width": 1,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should render correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "borderRadius": 40,
        "height": 8,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should render correctly with "min" and "max" attributes 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "borderRadius": 40,
        "height": 8,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should render correctly with a "fillStyle" attribute 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 40,
        "height": 8,
        "width": 0,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should render correctly with a "style" attribute 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "borderRadius": 40,
        "width": 120,
      },
      Object {
        "width": "80%",
      },
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "borderRadius": 40,
        "height": 8,
        "width": 0,
      }
    }
  />
</View>
`;

exports[`Android BpkProgress should render correctly with a "type" attribute 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "rgb(223, 247, 236)",
        "height": 8,
      },
      Object {
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "backgroundColor": "rgb(0, 215, 117)",
        "height": 8,
        "width": 0,
      }
    }
  />
</View>
`;
